fix: Tweak styling & spacing of privacy policy.
Close #151.

--- a/app/styles/app.pcss
+++ b/app/styles/app.pcss
@@ -37,7 +37,11 @@ p {
 }
 
 .main-container article ul {
-    @apply list-disc list-inside mb-4;
+    @apply list-disc list-outside mb-8;
+}
+
+.main-container article li {
+    @apply leading-snug mb-2;
 }
 
 /* Use for intro paragraphs of text. */
